<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
android:weightSum="10"
              android:orientation="vertical"
>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
    android:text="@string/click_on_map_to_select_your_venue"
              android:textColor="@color/white"
              android:padding="5dp"
              android:background="@color/colorPrimaryDark"
              android:gravity="center"
              android:textAlignment="center"
    />
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_weight="9.75"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/map"
              tools:context=".templates.MapsActivitySelectPrebuilt"
              android:name="com.google.android.gms.maps.SupportMapFragment"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.25">
        <android.support.v7.widget.AppCompatButton android:layout_width="wrap_content"
                                                   android:text="@string/select"
                                                   android:background="@color/colorAccent"
                                                   android:textColor="@color/white"
                                                   android:layout_weight="1"
                                                   android:onClick="confirm"
                                                   android:layout_height="match_parent"/>
        <android.support.v7.widget.AppCompatButton android:layout_width="wrap_content"
                                                   android:text="@string/cancel"
                                                   android:textColor="@color/white"
                                                   android:background="@color/colorPrimary"
                                                   android:layout_weight="1"
                                                   android:onClick="cancel"
                                                   android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>