<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/new_background"
        tools:context=".ui.auth.LoginActivity">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/new_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_title_regular" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/padding_3"
                    android:visibility="gone"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_more_vert_black_24dp" />
            </RelativeLayout>
        </android.support.design.widget.AppBarLayout>
        <ImageView
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_shipping"/>


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/verticalGuideline" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/verticalGuideline" />


        <EditText android:imeOptions="actionDone"
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_2"
            android:background="@drawable/white_edit_text"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
            app:layout_constraintVertical_bias="0.138" />


        <EditText android:imeOptions="actionDone"
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:background="@drawable/white_edit_text"
            android:drawablePadding="@dimen/padding_2"

            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_2"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />


        <EditText android:imeOptions="actionDone"
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:background="@drawable/white_edit_text"
            android:drawablePadding="@dimen/padding_2"

            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_2"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText android:imeOptions="actionDone"
            android:id="@+id/passwordConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2"
            android:background="@drawable/white_edit_text"
            android:drawablePadding="@dimen/padding_2"

            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_2"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/password" />



        <TextView
            android:id="@+id/CancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xl"

            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="@dimen/padding_2"
            android:paddingTop="@dimen/padding_2"
                android:background="#484FC3"

            android:textColor="@color/white"
            android:textSize="@dimen/text_body_regular"
                android:text="@string/sign_up"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/signUpButton"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirm" />

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="@dimen/padding_2"
                android:background="#3A9AE1"
            android:paddingTop="@dimen/padding_2"
                android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_body_regular"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/CancelButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/CancelButton" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>